fix: add a wrap to fix the size of the info section

--- a/src/styles/modules/_info.scss
+++ b/src/styles/modules/_info.scss
@@ -60,6 +60,11 @@
 	}
 }
 
+.info__content-wrap {
+	max-width: 1150px;
+	margin: 0 auto;
+}
+
 .info__content {
 	max-width: 764px;
 	margin-left: auto;
